--- a/public/_stylus/index.styl
+++ b/public/_stylus/index.styl
@@ -2,3 +2,6 @@
 @import 'global/variables'
 @import $npm_dir + '/nib'
 @import 'global/bootstrap'
+
+// Import all components
+@import 'components/*'
