--- a/public/_stylus/index.styl
+++ b/public/_stylus/index.styl
@@ -2,6 +2,7 @@
 @import 'global/variables'
 @import $npm_dir + '/nib'
 @import 'global/bootstrap'
+@import 'global/grayscale'
 
 // Import all components
-@import 'components/*'
+// @import 'components/*'
