Fix content formatting for EJS

--- a/public/_content/_applications.ejs
+++ b/public/_content/_applications.ejs
@@ -1,15 +1,15 @@
-Applications
+<h2>Applications</h2>
 
-<!-- h2 Applications
+<p>Applications are especially welcomed from final year doctoral students and postdoctoral researchers who already have begun, or would like to initiate, collaborations with participating scientists at any of the host institutions. You are encouraged to make contact with potential host scientists before submitting your application. Funding is available for travel and living expenses for visits of up to two months. </p>
 
-p Applications are especially welcomed from final year doctoral students and postdoctoral researchers who already have begun, or would like to initiate, collaborations with participating scientists at any of the host institutions. You are encouraged to make contact with potential host scientists before submitting your application. Funding is available for travel and living expenses for visits of up to two months. In your application please include the following three files:
+<p>In your application please include the following three files:</p>
 
-ul
-    li CV (including publications).
-    li Description of proposed research project (4 sides maximum) - this should include details of your preferred host and their institution.
-    li Names and contact details of two referees.
+<ul>
+    <li>CV (including publications).</li>
+    <li>Description of proposed research project (4 sides maximum) - this should include details of your preferred host and their institution.</li>
+    <li>Names and contact details of two referees.</li>
+</ul>
 
-p When complete, please send all three files in a single email to <a href="mailto:christopher.doogue@astro.ox.ac.uk">Christopher Doogue</a> with the subject: "CCS Application: [your name]".
+<p>When complete, please send all three files in a single email to <a href="mailto:christopher.doogue@astro.ox.ac.uk">Christopher Doogue</a> with the subject: "CCS Application: [your name]".</p>
 
-p Applications should be received by 30 March for a decision in May, but in exceptional cases will also be considered throughout the year.
- -->
+<p>Applications should be received by 30 March for a decision in May, but in exceptional cases will also be considered throughout the year.</p>
