--- a/public/_layout.jade
+++ b/public/_layout.jade
@@ -1,5 +1,6 @@
 doctype
 html
     head
+        link(rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css")
         link(rel="stylesheet" href="/style.css")
     != yield
