--- a/public/_stylus/global/bootstrap.styl
+++ b/public/_stylus/global/bootstrap.styl
@@ -1,6 +1,14 @@
 bootstrap(name)
     $npm_dir + '/bootstrap-styl/bootstrap/' + name
 
+// Overrides
+$body-bg = #000
+$text-color = $gray-lighter
+$link-color = #42dca3
+$link-hover-color = #1d9b6c
+$link-hover-decoration = none
+$font-size-base = 18px
+
 // Core variables and mixins
 @import bootstrap('variables')
 @import bootstrap('mixins')
@@ -14,7 +22,7 @@ bootstrap(name)
 @import bootstrap('scaffolding')
 @import bootstrap('utilities')
 @import bootstrap('type')
-@import bootstrap('code')
+// @import bootstrap('code')
 @import bootstrap('grid')
 @import bootstrap('tables')
 @import bootstrap('forms')
@@ -22,25 +30,25 @@ bootstrap(name)
 
 // Components
 @import bootstrap('component-animations')
-@import bootstrap('dropdowns')
+// @import bootstrap('dropdowns')
 @import bootstrap('button-groups')
 @import bootstrap('input-groups')
 @import bootstrap('navs')
 @import bootstrap('navbar')
-@import bootstrap('breadcrumbs')
-@import bootstrap('pagination')
-@import bootstrap('pager')
-@import bootstrap('labels')
-@import bootstrap('badges')
-@import bootstrap('jumbotron')
+// @import bootstrap('breadcrumbs')
+// @import bootstrap('pagination')
+// @import bootstrap('pager')
+// @import bootstrap('labels')
+// @import bootstrap('badges')
+// @import bootstrap('jumbotron')
 @import bootstrap('thumbnails')
-@import bootstrap('alerts')
-@import bootstrap('progress-bars')
+// @import bootstrap('alerts')
+// @import bootstrap('progress-bars')
 @import bootstrap('media')
-@import bootstrap('list-group')
-@import bootstrap('panels')
-@import bootstrap('responsive-embed')
-@import bootstrap('wells')
+// @import bootstrap('list-group')
+// @import bootstrap('panels')
+// @import bootstrap('responsive-embed')
+// @import bootstrap('wells')
 @import bootstrap('close')
 
 // Components w/ JavaScript
