Add responsive circular images to org members

--- a/public/_content/_organisation.ejs
+++ b/public/_content/_organisation.ejs
@@ -50,7 +50,9 @@
 
 <% people.forEach(function (person) { %>
     <div class="organisation-member">
-        <img class="image" src="<%= person.image %>">
+        <div class="image">
+            <img src="<%= person.image %>">
+        </div>
         <div class="details">
             <div><%= person.name %></div>
             <div><%= person.title %></div>
