--- a/public/_stylus/components/organisation-member.styl
+++ b/public/_stylus/components/organisation-member.styl
@@ -5,7 +5,10 @@
 
     > .image
         @extend .col-xs-2
-        border-radius: 50%
+
+    > .image > img
+        @extend .img-responsive
+        @extend .img-circle
         border: 2px solid white
 
     > .details
