--- a/public/_stylus/global/bootstrap.styl
+++ b/public/_stylus/global/bootstrap.styl
@@ -8,6 +8,7 @@ $link-color = #42dca3
 $link-hover-color = #1d9b6c
 $link-hover-decoration = none
 $font-size-base = 18px
+$line-height-base = 1.4444
 
 // Core variables and mixins
 @import bootstrap('variables')
@@ -24,15 +25,15 @@ $font-size-base = 18px
 @import bootstrap('type')
 // @import bootstrap('code')
 @import bootstrap('grid')
-@import bootstrap('tables')
+// @import bootstrap('tables')
 @import bootstrap('forms')
 @import bootstrap('buttons')
 
 // Components
 @import bootstrap('component-animations')
 // @import bootstrap('dropdowns')
-@import bootstrap('button-groups')
-@import bootstrap('input-groups')
+// @import bootstrap('button-groups')
+// @import bootstrap('input-groups')
 @import bootstrap('navs')
 @import bootstrap('navbar')
 // @import bootstrap('breadcrumbs')
