--- a/public/_stylus/index.styl
+++ b/public/_stylus/index.styl
@@ -3,6 +3,7 @@
 @import $npm_dir + '/nib'
 @import 'global/bootstrap'
 @import 'global/grayscale'
+@import 'global/typography'
 
 // Import all components
 @import 'components/*'
