Misc HTML fixes
Fix #12

--- a/public/index.ejs
+++ b/public/index.ejs
@@ -5,7 +5,7 @@
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
-                    <i class="fa fa-bars"></i>
+                    <span class="fa fa-bars"></span>
                 </button>
                 <a class="navbar-brand js-page-scroll" href="#page-top">Home</a>
             </div>
