--- a/public/_stylus/components/navbar-custom.styl
+++ b/public/_stylus/components/navbar-custom.styl
@@ -7,6 +7,11 @@
 .navbar-custom .navbar-brand
     font-size: 16px
 
+.navbar-custom .navbar-brand:hover
+    outline: 0
+    color: $link-color
+    background-color: transparent
+
 .navbar-custom .navbar-toggle
     padding: 4px 6px
     font-size: 16px
@@ -27,7 +32,7 @@
 
 .navbar-custom .nav li a:hover
     outline: 0
-    color: rgba(255,255,255,.8)
+    color: $link-color
     background-color: transparent
 
 
@@ -42,7 +47,7 @@
 
 
 .navbar-custom .nav li.active a
-    background-color: rgba(255,255,255,.3)
+    background-color: $link-color
 
 
 .navbar-custom .nav li.active a:hover
