--- a/public/_stylus/global/bootstrap.styl
+++ b/public/_stylus/global/bootstrap.styl
@@ -4,9 +4,10 @@ bootstrap(name)
 // Overrides
 $body-bg = #000
 $text-color = $gray-lighter
-$link-color = #42dca3
-$link-hover-color = #1d9b6c
-$link-hover-decoration = none
+$link-color = #7DB4B5
+$link-hover-color = darken($link-color, 30%)
+$link-hover-decoration = underline
+
 $font-size-base = 18px
 $line-height-base = 1.4444
 
