--- a/public/index.ejs
+++ b/public/index.ejs
@@ -50,8 +50,7 @@
     <% }) %>
 
     <footer class="site-footer">
-        <p>Copyright &copy; Your Website 2014</p>
-        <p>M82 image via <a target="_blank" href="https://www.flickr.com/photos/smithsonian/2941504858/in/photolist-rQf3Z3-qnhe5a-rj1SX9-iyq1z5-nu5DrK-eL3fPt-5tVYV1-pTDvDs-6rhyrj-5tRBji-oQJQDE-oNCeVm-fd46U7-fNHEQC-6o67DX-fd46Nj-89GEo2-5RW5Kq-bMJ1Ck-4rTyX5-5hJ5Cx-jvy5jz-8FeMLH-7VnAsE-dS3yBQ-9aQRw4-9smFoR-cJHqg5-9bk2LL-4cwr27-q2fTri-e8hGuM-rB6quC-hyzMyT-5RYkqF-qvvS3N-rTCP35-r5FTJM-rqzuna-pNd8Ls-5tRHAa-5JG7No-eaZXhh-dS8qaB-emmEUS-msQEF-9dCHdN-rDqMob-5ZrBEn-4QJNdC">Flickr</a></p>
+        <p>Image of M82 via <a target="_blank" href="https://www.flickr.com/photos/smithsonian/2941504858/in/photolist-rQf3Z3-qnhe5a-rj1SX9-iyq1z5-nu5DrK-eL3fPt-5tVYV1-pTDvDs-6rhyrj-5tRBji-oQJQDE-oNCeVm-fd46U7-fNHEQC-6o67DX-fd46Nj-89GEo2-5RW5Kq-bMJ1Ck-4rTyX5-5hJ5Cx-jvy5jz-8FeMLH-7VnAsE-dS3yBQ-9aQRw4-9smFoR-cJHqg5-9bk2LL-4cwr27-q2fTri-e8hGuM-rB6quC-hyzMyT-5RYkqF-qvvS3N-rTCP35-r5FTJM-rqzuna-pNd8Ls-5tRHAa-5JG7No-eaZXhh-dS8qaB-emmEUS-msQEF-9dCHdN-rDqMob-5ZrBEn-4QJNdC">Flickr</a>, used under public domain.</p>
     </footer>
 
     <script src="js/jquery.js"></script>
