Remove glyphicon styles

--- a/public/_stylus/global/bootstrap.styl
+++ b/public/_stylus/global/bootstrap.styl
@@ -18,7 +18,7 @@ $line-height-base = 1.4444
 // Reset and dependencies
 @import bootstrap('normalize')
 @import bootstrap('print')
-@import bootstrap('glyphicons')
+// @import bootstrap('glyphicons')
 
 // Core CSS
 @import bootstrap('scaffolding')
