Update Chris Doogue's photo and job title
Fix #6

--- a/public/_content/_organisation.ejs
+++ b/public/_content/_organisation.ejs
@@ -41,7 +41,7 @@
     },
     {
         name: 'Christopher Doogue',
-        title: 'Administrative Assistant',
+        title: 'Balzan Project Assistant',
         organisation: 'Dept of Physics, University of Oxford; New College Oxford',
         image: "img/group_doogue.jpg",
         email: 'c.doogue1@physics.ox.ac.uk',
