Changing date and title

--- a/public/_content/_organisation.ejs
+++ b/public/_content/_organisation.ejs
@@ -2,7 +2,7 @@
 
 <% var people = [
     {
-        name: "Dr Chris Lintott",
+        name: "Prof Chris Lintott",
         title: "Director",
         organisation: "Dept of Physics, University of Oxford; New College Oxford",
         image: "img/group_lintott.jpg",
