--- a/public/_content/_applications.ejs
+++ b/public/_content/_applications.ejs
@@ -12,4 +12,4 @@
 
 <p>When complete, please send all three files in a single email to <a href="mailto:christopher.doogue@astro.ox.ac.uk">Christopher Doogue</a> with the subject: "CCS Application: [your name]".</p>
 
-<p>Applications should be received by 30 March for a decision in May, but in exceptional cases will also be considered throughout the year.</p>
+<p>Applications should be received by 15th June for a decision by the end of June, but in exceptional cases will also be considered throughout the year.</p>
