Adding new names

--- a/public/_content/_contact.ejs
+++ b/public/_content/_contact.ejs
@@ -26,10 +26,13 @@
     <ul>
         <li><a href="mailto:steven.balbus@astro.ox.ac.uk">Steve Balbus</a></li>
         <li><a href="mailto:j.binney1@physics.ox.ac.uk">James Binney</a></li>
+		<li><a href="mailto:bureau@astro.ox.ac.uk">Martin Bureau</a></li>
+		<li><a href="mailto:j.conlon1@physics.ox.ac.uk">Joseph Conlon</a></li>
         <li><a href="mailto:r.davies1@physics.ox.ac.uk">Roger Davies</a></li>
         <li><a href="mailto:j.devriendt1@physics.ox.ac.uk">Julien Devriendt</a></li>
         <li><a href="mailto:j.dunkley1@physics.ox.ac.uk">Joanna Dunkley</a></li>
         <li><a href="mailto:p.ferreira1@physics.ox.ac.uk">Pedro Ferreira</a></li>
+		<li><a href="mailto:matt.jarvis@physics.ox.ac.uk">Matt Jarvis</a></li>
         <li><a href="mailto:cjl@astro.ox.ac.uk">Chris Lintott</a></li>
         <li><a href="mailto:j.maggorian@physics.ox.ac.uk">John Maggorian</a></li>
         <li><a href="mailto:jmr@thphys.ox.ac.uk">John March-Russell</a></li>
@@ -44,6 +47,7 @@
     <ul>
         <li><a href="mailto:kamion@jhu.edu">Marc Kamionkowski</a></li>
         <li><a href="mailto:dkaplan@pha.jhu.edu">David Kaplan</a></li>
+		<li><a href="mailto:kapla14@jhu.edu">Jared Kaplan</a></li>
         <li><a href="mailto:jhk@pha.jhu.edu">Julian Krolik</a></li>
         <li><a href="mailto:norman@stsci.edu">Colin Norman</a></li>
         <li><a href="mailto:silk@iap.fr">Joe Silk</a></li>
@@ -55,12 +59,15 @@
 <div class="list">
     <h4>Institut d'Astrophysique</h4>
     <ul>
+		<li><a href="mailto:francis.bernardeau@iap.fr">Francis Bernardeau</a></li>
         <li><a href="mailto:bouchet@iap.fr">Francois Bouchet</a></li>
         <li><a href="mailto:charlot@iap.fr">Stephane Charlot</a></li>
         <li><a href="mailto:colombi@iap.fr">Stephane Colombi</a></li>
         <li><a href="mailto:kotera@iap.fr">Kumiko Kotera</a></li>
+		<li><a href-"mailto:lavaux@iap.fr">Guillaume Lavaux</a></li>
         <li><a href="mailto:gam@iap.fr">Gary Mamon</a></li>
         <li><a href="mailto:mohayaee@iap.fr">Roya Mohayaee</a></li>
+		<li><a href="mailto:peirani@iap.fr">Sebastian Pierani</a></li>
         <li><a href="mailto:pichon@iap.fr">Christophe Pichon</a></li>
         <li><a href="mailto:silk@iap.fr">Joe Silk</a></li>
         <li><a href="mailto:uzan@iap.fr">Jean-Philippe Uzan</a></li>
