--- a/public/_content/_contact.ejs
+++ b/public/_content/_contact.ejs
@@ -64,7 +64,7 @@
         <li><a href="mailto:charlot@iap.fr">Stephane Charlot</a></li>
         <li><a href="mailto:colombi@iap.fr">Stephane Colombi</a></li>
         <li><a href="mailto:kotera@iap.fr">Kumiko Kotera</a></li>
-		<li><a href-"mailto:lavaux@iap.fr">Guillaume Lavaux</a></li>
+		<li><a href="mailto:lavaux@iap.fr">Guillaume Lavaux</a></li>
         <li><a href="mailto:gam@iap.fr">Gary Mamon</a></li>
         <li><a href="mailto:mohayaee@iap.fr">Roya Mohayaee</a></li>
 		<li><a href="mailto:peirani@iap.fr">Sebastian Pierani</a></li>
