Add new host scientist

--- a/public/_content/_contact.ejs
+++ b/public/_content/_contact.ejs
@@ -66,9 +66,10 @@
         <li><a href="mailto:kotera@iap.fr">Kumiko Kotera</a></li>
 		<li><a href="mailto:lavaux@iap.fr">Guillaume Lavaux</a></li>
         <li><a href="mailto:gam@iap.fr">Gary Mamon</a></li>
+        <li><a href="mailto:jmartin@iap.fr">Jerome Martin</a></li>
         <li><a href="mailto:mohayaee@iap.fr">Roya Mohayaee</a></li>
-		<li><a href="mailto:peirani@iap.fr">Sebastian Pierani</a></li>
         <li><a href="mailto:pichon@iap.fr">Christophe Pichon</a></li>
+        <li><a href="mailto:peirani@iap.fr">Sebastian Pierani</a></li>
         <li><a href="mailto:silk@iap.fr">Joe Silk</a></li>
         <li><a href="mailto:uzan@iap.fr">Jean-Philippe Uzan</a></li>
         <li><a href="mailto:vangioni@iap.fr">Elisabeth Vangioni</a></li>
