--- a/public/_content/_organisation.ejs
+++ b/public/_content/_organisation.ejs
@@ -40,11 +40,11 @@
         website: 'http://www.physics.ox.ac.uk/astro/people/JoeSilk.htm'
     },
     {
-        name: 'Christopher Doogue',
+        name: 'Ashling Morris',
         title: 'Balzan Project Assistant',
         organisation: 'Dept of Physics, University of Oxford; New College Oxford',
-        image: "img/group_doogue.jpg",
-        email: 'c.doogue1@physics.ox.ac.uk',
+        image: "img/group_morris.jpg",
+        email: 'ashling.morris@astro.ox.ac.uk',
     }
 ]; %>
 
