Add Erminia Calabrese

--- a/public/_content/_contact.ejs
+++ b/public/_content/_contact.ejs
@@ -39,6 +39,7 @@
         <li><a href="mailto:l.miller1@physics.ox.ac.uk">Lance Miller</a></li>
         <li><a href="mailto:silk@iap.fr">Joe Silk</a></li>
         <li><a href="mailto:a.slyz1@physics.ox.ac.uk">Adrienne Slyz</a></li>
+        <li><a href="mailto:Erminia.Calabrese@physics.ox.ac.uk">Erminia Calabrese</a></li>
     </ul>
 </div>
 
