Updates for March 2017

--- a/public/_content/_applications.ejs
+++ b/public/_content/_applications.ejs
@@ -10,6 +10,6 @@
     <li>Names and contact details of two referees.</li>
 </ul>
 
-<p>When complete, please send all three files in a single email to <a href="mailto:ashling.morris@astro.ox.ac.uk">Ashling Morris</a> with the subject: "CCS Application: [your name]".</p>
+<p>When complete, please send all three files in a single email to <a href="mailto:tracey.greyvenstein@physics.ox.ac.uk">Tracey Greyvenstein</a> with the subject: "CCS Application: [your name]".</p>
 
-<p>Applications should be received by 15th June for a decision by the end of June, but in exceptional cases will also be considered throughout the year.</p>
+<p>Applications should be received by 31 May 2017, but in exceptional cases will also be considered throughout the year.</p>
