--- a/public/_content/_organisation.ejs
+++ b/public/_content/_organisation.ejs
@@ -40,11 +40,11 @@
         website: 'http://www.physics.ox.ac.uk/astro/people/JoeSilk.htm'
     },
     {
-        name: 'Ashling Morris',
-        title: 'Balzan Project Assistant',
+        name: 'Tracey Greyvenstein',
+        title: 'Project Assistant to SKA and the Zooniverse',
         organisation: 'Dept of Physics, University of Oxford; New College Oxford',
         image: "img/group_morris.jpg",
-        email: 'ashling.morris@astro.ox.ac.uk',
+        email: 'tracey.greyvenstein@physics.ox.ac.uk',
     }
 ]; %>
 
