--- a/public/_content/_about.ejs
+++ b/public/_content/_about.ejs
@@ -2,7 +2,7 @@
 
 <p>Cosmology is in a golden age of discovery, but a deeper understanding of what is meant by a science of cosmology, in the fuller reaches of these words, is in its infancy. It must involve astrophysics, physics, philosophy, and cosmogony, and tackle genuinely fundamental questions in cosmology.</p>
 
-<p>This project focuses on five areas of this kind which are timely, and where Oxford and the partner institutions have particular research interests and strengths. Our work will involve both stimulating the pursuit of these questions in the longer term and by a larger audience, and researching fundamental issues in cosmology. These areas will include the following:</p>
+<p>This project focuses on five areas of this kind which are currently the subject of much activity, and where Oxford and the partner institutions have particular research interests and strengths. Our work will involve both stimulating the pursuit of these questions in the longer term and by a larger audience, and researching fundamental issues in cosmology. These areas will include the following:</p>
 
 <ol>
     <li><strong>Issues of measure, and beyond:</strong> to understand the requirements and possibilities for a probability ‘measure’ of the observed universe in some space of possibilities, including potential uses of anthropic reasoning;</li>
