Replace Ashling's photo with Tracey's

--- a/public/_content/_organisation.ejs
+++ b/public/_content/_organisation.ejs
@@ -43,7 +43,7 @@
         name: 'Tracey Greyvenstein',
         title: 'Project Assistant to SKA and the Zooniverse',
         organisation: 'Dept of Physics, University of Oxford; New College Oxford',
-        image: "img/group_morris.jpg",
+        image: "img/group_greyvenstein.jpg",
         email: 'tracey.greyvenstein@physics.ox.ac.uk',
     }
 ]; %>
