Broadening text about topics

--- a/public/_content/_about.ejs
+++ b/public/_content/_about.ejs
@@ -2,7 +2,10 @@
 
 <p>Cosmology is in a golden age of discovery, but a deeper understanding of what is meant by a science of cosmology, in the fuller reaches of these words, is in its infancy. It must involve astrophysics, physics, philosophy, and cosmogony, and tackle genuinely fundamental questions in cosmology.</p>
 
-<p>This project focuses on five areas of this kind which are currently the subject of much activity, and where Oxford and the partner institutions have particular research interests and strengths. Our work will involve both stimulating the pursuit of these questions in the longer term and by a larger audience, and researching fundamental issues in cosmology. These areas will include the following:</p>
+<p>This project focuses on areas of this kind which are currently the subject of much activity, and where Oxford and the partner institutions have particular research interests and strengths. Our work will involve both stimulating the pursuit of these questions in the longer term and by a larger audience, and researching fundamental issues in cosmology. 
+
+
+Areas of special interest will include the following, but applications are welcome from all those whose work is connected to cosmology in its broadest sense:</p>
 
 <ol>
     <li><strong>Issues of measure, and beyond:</strong> to understand the requirements and possibilities for a probability ‘measure’ of the observed universe in some space of possibilities, including potential uses of anthropic reasoning;</li>
@@ -12,7 +15,7 @@
     <li><strong>Data science:</strong> To understand and develop new techniques for cosmology with the largest of data sets.</li>
 </ol>
 
-<p>Goals: to provide grants for young researchers in cosmology in frontier areas of research that are consistent with the scientific themes supported by the Centre, and to establish international links involving leading young researchers to develop scientific interactions and collaborations that will benefit their careers as well as enhance the scientific life of the partner institutions. Key areas of research will include particle astrophysics, galaxy formation, the early universe, and the philosophy of cosmology.</p>
+<p>Goals: to provide grants for young researchers in cosmology and related subjects in frontier areas of research, and to establish international links involving leading young researchers to develop scientific interactions and collaborations that will benefit their careers as well as enhance the scientific life of the partner institutions. Key areas of research will include particle astrophysics, galaxy formation and evolution, the early universe, and the philosophy of cosmology. <b>Applications from researchers in any of these fields are welcome</b></p>
 
 <p>The grants will provide for visits of between 2 weeks and 2 months at the partner institutions. Visitors will generally not overlap at any one institution. New College will be requested to host the equivalent of a non-stipendiary Visiting Junior Research Fellow (JRF). The visitors will be invited to give an interdisciplinary talk (aimed at a broad audience) as well as a departmental seminar on their research.</p>
 
