--- a/public/_content/_contact.ejs
+++ b/public/_content/_contact.ejs
@@ -32,10 +32,12 @@
         <li><a href="mailto:j.devriendt1@physics.ox.ac.uk">Julien Devriendt</a></li>
         <li><a href="mailto:p.ferreira1@physics.ox.ac.uk">Pedro Ferreira</a></li>
 		<li><a href="mailto:matt.jarvis@physics.ox.ac.uk">Matt Jarvis</a></li>
+		<li><a href="mailto:M.Jones3@physics.ox.ac.uk">Mike Jones</a></li>
         <li><a href="mailto:cjl@astro.ox.ac.uk">Chris Lintott</a></li>
         <li><a href="mailto:j.maggorian@physics.ox.ac.uk">John Maggorian</a></li>
         <li><a href="mailto:jmr@thphys.ox.ac.uk">John March-Russell</a></li>
         <li><a href="mailto:l.miller1@physics.ox.ac.uk">Lance Miller</a></li>
+		<li><a href="mailto:angela.taylor@physics.ox.ac.uk">Angela Taylor</a></li>
         <li><a href="mailto:silk@iap.fr">Joe Silk</a></li>
         <li><a href="mailto:a.slyz1@physics.ox.ac.uk">Adrienne Slyz</a></li>
     </ul>
