--- a/public/_content/_contact.ejs
+++ b/public/_content/_contact.ejs
@@ -26,6 +26,7 @@
     <ul>
         <li><a href="mailto:steven.balbus@astro.ox.ac.uk">Steve Balbus</a></li>
         <li><a href="mailto:j.binney1@physics.ox.ac.uk">James Binney</a></li>
+		<li><a href="mailto:Andy.Bunker@physics.ox.ac.uk">Andy Bunker</a></li>
 		<li><a href="mailto:bureau@astro.ox.ac.uk">Martin Bureau</a></li>
 		<li><a href="mailto:j.conlon1@physics.ox.ac.uk">Joseph Conlon</a></li>
         <li><a href="mailto:r.davies1@physics.ox.ac.uk">Roger Davies</a></li>
