Update application dates

--- a/public/_content/_applications.ejs
+++ b/public/_content/_applications.ejs
@@ -12,4 +12,4 @@
 
 <p>When complete, please send all three files in a single email to <a href="mailto:tracey.greyvenstein@physics.ox.ac.uk">Tracey Greyvenstein</a> with the subject: "CCS Application: [your name]".</p>
 
-<p>Applications should be received by 31 May 2017, but in exceptional cases will also be considered throughout the year.</p>
+<p>Applications for travel during 2017/18 are now being considered; late submissions are still very welcome. Please contact us for details of deadlines - or just submit.</p>
