Update Tracey's contact details

--- a/public/_content/_contact.ejs
+++ b/public/_content/_contact.ejs
@@ -6,6 +6,10 @@
 
 <address>Tracey Greyvenstein<br>Denys Wilkinson Building<br>Keble Road<br>Oxford OX1 3RH<br>UK</address>
 
+<p>Tel: <a href="tel:+441865273352">+44 (0)1865 273352</a><br>
+    Email: <a href="mailto:tracey.greyvenstein@physics.ox.ac.uk">tracey.greyvenstein@physics.ox.ac.uk</a>
+</p>
+
 <h3>Participating Institutions</h3>
 
 <p>Contact information for the participating institutions can be found at the following links:</p>
