Add Henry McCracken as IAP host

--- a/public/_content/_contact.ejs
+++ b/public/_content/_contact.ejs
@@ -74,6 +74,7 @@
 		<li><a href="mailto:lavaux@iap.fr">Guillaume Lavaux</a></li>
         <li><a href="mailto:gam@iap.fr">Gary Mamon</a></li>
         <li><a href="mailto:jmartin@iap.fr">Jerome Martin</a></li>
+        <li><a href="mailto:hjmcc@iap.fr">Henry McCracken</a></li>
         <li><a href="mailto:mohayaee@iap.fr">Roya Mohayaee</a></li>
         <li><a href="mailto:pichon@iap.fr">Christophe Pichon</a></li>
         <li><a href="mailto:peirani@iap.fr">Sebastian Pierani</a></li>
