Updating deadline and contact details

--- a/public/_content/_applications.ejs
+++ b/public/_content/_applications.ejs
@@ -10,6 +10,6 @@
     <li>Names and contact details of two referees.</li>
 </ul>
 
-<p>When complete, please send all three files in a single email to <a href="mailto:tracey.greyvenstein@physics.ox.ac.uk">Tracey Greyvenstein</a> with the subject: "CCS Application: [your name]".</p>
+<p>When complete, please send all three files in a single email to <a href="mailto:ashling.gordon@physics.ox.ac.uk">Ashling Gordon</a> with the subject: "CCS Application: [your name]".</p>
 
-<p>Applications for travel during 2018/19 are now being considered; late submissions are still very welcome. Please contact us for details of deadlines - or just submit.</p>
+<p>Applications for travel during 2019/20 will shortly be considered. Please sumbit by May 7th 2019 for full consideration. If you have any questions, please contact Ashling Gordon on the above address.</p>
