--- a/public/_content/_organisation.ejs
+++ b/public/_content/_organisation.ejs
@@ -40,11 +40,11 @@
         website: 'http://www.physics.ox.ac.uk/astro/people/JoeSilk.htm'
     },
     {
-        name: 'Tracey Greyvenstein',
+        name: 'Ashling Gordon',
         title: 'Project Assistant to SKA and the Zooniverse',
-        organisation: 'Dept of Physics, University of Oxford; New College Oxford',
-        image: "img/group_greyvenstein.jpg",
-        email: 'tracey.greyvenstein@physics.ox.ac.uk',
+        organisation: 'Graduate Administrator and PA to Head of Sub Department',
+        image: "",
+        email: 'ashling.gordon@physics.ox.ac.uk',
     }
 ]; %>
 
