Update deadline, Ashling title

--- a/public/_content/_organisation.ejs
+++ b/public/_content/_organisation.ejs
@@ -41,8 +41,8 @@
     },
     {
         name: 'Ashling Gordon',
-        title: 'Project Assistant to SKA and the Zooniverse',
-        organisation: 'Graduate Administrator and PA to Head of Sub Department',
+        title: 'Graduate Administrator and PA to Head of Sub Department',
+        organisation: 'University of Oxford',
         image: "",
         email: 'ashling.gordon@physics.ox.ac.uk',
     }
