--- a/public/_content/_contact.ejs
+++ b/public/_content/_contact.ejs
@@ -28,8 +28,8 @@
 <div class="list">
     <h4>Oxford</h4>
     <ul>
+		<li><a href="mailto:david.alonso@physics.ox.ac.uk">David Alonso</a></li>
         <li><a href="mailto:steven.balbus@astro.ox.ac.uk">Steve Balbus</a></li>
-        <li><a href="mailto:j.binney1@physics.ox.ac.uk">James Binney</a></li>
 		<li><a href="mailto:Andy.Bunker@physics.ox.ac.uk">Andy Bunker</a></li>
 		<li><a href="mailto:bureau@astro.ox.ac.uk">Martin Bureau</a></li>
 		<li><a href="mailto:j.conlon1@physics.ox.ac.uk">Joseph Conlon</a></li>
