--- a/public/_content/_contact.ejs
+++ b/public/_content/_contact.ejs
@@ -2,12 +2,12 @@
 
 <h3>General enquiries</h3>
 
-<p>For more information, general queries or to submit an application, please contact Ashling Gordon:</p>
+<p>For more information, general queries or to submit an application, please contact Tanya Gujral:</p>
 
-<address>Ashling Gordon<br>Denys Wilkinson Building<br>Keble Road<br>Oxford OX1 3RH<br>UK</address>
+<address>Tanya Gujral<br>Denys Wilkinson Building<br>Keble Road<br>Oxford OX1 3RH<br>UK</address>
 
-<p>Tel: <a href="tel:+441865273303">+44 (0)1865 273303</a><br>
-    Email: <a href="mailto:ashling.gordon@physics.ox.ac.uk">ashling.gordon@physics.ox.ac.uk</a>
+<p>Tel: <a href="tel:+441865273302">+44 (0)1865 273302</a><br>
+    Email: <a href="mailto:tanya.gujral@physics.ox.ac.uk">tanya.gujral@physics.ox.ac.uk</a>
 </p>
 
 <h3>Participating Institutions</h3>
