--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -40,6 +40,6 @@
 
 @layer utilities {
   .text-shadow {
-    text-shadow: 0 0 10px rgb(0 0 0 / 50%)
+    text-shadow: 0 0 10px rgb(0 0 0 / 50%);
   }
 }
