Update March-Russell image, readme, rename submission dates

--- a/src/_includes/components/applications.njk
+++ b/src/_includes/components/applications.njk
@@ -13,7 +13,7 @@ In your application please include the following three files:
 - Names and contact details of two referees.
 - When complete, please send all three files in a single email to [{{ administrator.name }}](mailto:{{ administrator.email }}) with the subject: "CCS Application: [your name]".
 
-Applications for travel during {{ submission_dates.academicYear }} will shortly be considered. Please submit by {{ submission_dates.closingDate }} for full consideration. If you have any questions, [please contact {{ administrator.name }}](mailto:{{ administrator.email }}).
+Applications for travel during {{ application_dates.academicYear }} will shortly be considered. Please submit by {{ application_dates.closingDate }} for full consideration. If you have any questions, [please contact {{ administrator.name }}](mailto:{{ administrator.email }}).
     {% endmarkdown %}
   </div>
 </section>
