Add title, description, og tags

--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -2,7 +2,15 @@
 <html lang="en">
   <head>
     <title>{{ title }}</title>
-     <link rel="stylesheet" type="text/css" href="{{ manifest['main.css'] }}" />
+    <link rel="stylesheet" type="text/css" href="{{ manifest['main.css'] }}" />
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="{{ description }}" />
+    <meta property="og:title" content="{{ title }}" />
+    <meta property="og:description" content="{{ description }}" />
+    <meta property="og:type" content="website" />
+    <meta property="og:locale" content="en_GB" />
   </head>
   <body class="text-lg bg-black text-white">
     <main>
