--- a/src/index.njk
+++ b/src/index.njk
@@ -1,5 +1,6 @@
 ---
-title: Home
+title: Centre for Cosmological Studies - New College Oxford, Johns Hopkins
+description: The CCS provides grants for young researchers in cosmology, especially in particle astrophysics, galaxy formation, the early universe, and the philosophy of cosmology.
 layout: layouts/base.njk
 ---
 
