Add script to stickify the header

--- a/src/_includes/components/organisation.njk
+++ b/src/_includes/components/organisation.njk
@@ -1,4 +1,4 @@
-<section class="max-w-2xl mx-auto px-8 pt-52">
+<section class="max-w-2xl mx-auto px-8 pt-52" id="organisation">
   <h2>
     Organisation
   </h2>
