--- a/src/_includes/components/about.njk
+++ b/src/_includes/components/about.njk
@@ -1,4 +1,4 @@
-<section class="max-w-2xl mx-auto px-8 pt-52">
+<section class="max-w-2xl mx-auto px-8 pt-52" id="about">
   <h2>
     About the Project
   </h2>
