--- a/src/_includes/components/contact.njk
+++ b/src/_includes/components/contact.njk
@@ -1,4 +1,4 @@
-<section class="max-w-2xl mx-auto px-8 pt-52">
+<section class="max-w-2xl mx-auto px-8 pt-52" id="contact">
   <h2>
     Contact
   </h2>
