--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -10,9 +10,39 @@
     <meta property="og:title" content="{{ title }}" />
     <meta property="og:description" content="{{ description }}" />
     <meta property="og:type" content="website" />
-    <meta property="og:locale" content="en_GB" />
+    <meta property="og:locale" content="en_gb" />
   </head>
-  <body class="text-lg bg-black text-white">
+  <body class="text-lg bg-black text-white relative">
+    <div id="page-top" data-page-top class="absolute top-0"></div>
+    <header class="uppercase p-6 fixed top-0 w-full transition bg-transparent duration-500 tracking-wide" data-header>
+      <nav class="flex flex-row gap-x-6 justify-between items-center text-base font-semibold">
+        <a href="#" class="text-white hover:text-teal">
+          Home
+        </a>
+        <ul class="flex gap-x-6 justify-center list-none m-0">
+          <li>
+            <a href="#about" class="text-white hover:text-teal">
+              About
+            </a>
+          </li>
+          <li>
+            <a href="#organisation" class="text-white hover:text-teal">
+              Organisation
+            </a>
+          </li>
+          <li>
+            <a href="#applications" class="text-white hover:text-teal">
+              Applications
+            </a>
+          </li>
+          <li>
+            <a href="#contact" class="text-white hover:text-teal">
+              Contact
+            </a>
+          </li>
+        </ul>
+      </nav>
+    </header>
     <main>
       {{ content | safe }}
     </main>
