--- a/src/_includes/components/applications.njk
+++ b/src/_includes/components/applications.njk
@@ -11,7 +11,8 @@ In your application please include the following three files:
 - CV (including publications).
 - Description of proposed research project (4 sides maximum) - this should include details of your preferred host and their institution.
 - Names and contact details of two referees.
-- When complete, please send all three files in a single email to [{{ administrator.name }}](mailto:{{ administrator.email }}) with the subject: "CCS Application: [your name]".
+
+When complete, please send all three files in a single email to [{{ administrator.name }}](mailto:{{ administrator.email }}) with the subject: "CCS Application: [your name]".
 
 Applications for travel during {{ application_dates.academicYear }} will shortly be considered. Please submit by {{ application_dates.closingDate }} for full consideration. If you have any questions, [please contact {{ administrator.name }}](mailto:{{ administrator.email }}).
     {% endmarkdown %}
