--- a/src/_includes/components/about.njk
+++ b/src/_includes/components/about.njk
@@ -3,6 +3,10 @@
     About the Project
   </h2>
   <div class="markdown">
+
+<h2>
+We are now accepting applications for travel in 2022
+</h2>
     {% markdown %}
 Cosmology is in a golden age of discovery, but a deeper understanding of what is meant by a science of cosmology, in the fuller reaches of these words, is in its infancy. It must involve astrophysics, physics, philosophy, and cosmogony, and tackle genuinely fundamental questions in cosmology.
 
