Add OG image, derive base URL from env

--- a/src/robots.njk
+++ b/src/robots.njk
@@ -4,4 +4,4 @@ eleventyExcludeFromCollections: true
 ---
 User-agent: *
 Disallow:
-Sitemap: {{ site.url }}/sitemap.xml
+Sitemap: {{ env.baseUrl }}/sitemap.xml
