--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -11,6 +11,7 @@
     <meta property="og:description" content="{{ description }}" />
     <meta property="og:type" content="website" />
     <meta property="og:locale" content="en_gb" />
+    <meta property="og:image" content="{{ env.baseUrl }}{% ogImage './src/images/intro-bg.jpg' %}" />
   </head>
   <body class="text-lg bg-black text-white relative">
     <div id="page-top" data-page-top class="absolute top-0"></div>
