Use margin in header rather than gap

--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -20,19 +20,19 @@
         <a href="#" class="text-white hover:text-teal">
           Home
         </a>
-        <ul class="flex gap-x-6 justify-center list-none m-0">
+        <ul class="flex justify-center list-none m-0">
           <li>
-            <a href="#about" class="text-white hover:text-teal">
+            <a href="#about" class="text-white hover:text-teal mr-8">
               About
             </a>
           </li>
           <li>
-            <a href="#organisation" class="text-white hover:text-teal">
+            <a href="#organisation" class="text-white hover:text-teal mr-8">
               Organisation
             </a>
           </li>
           <li>
-            <a href="#applications" class="text-white hover:text-teal">
+            <a href="#applications" class="text-white hover:text-teal mr-8">
               Applications
             </a>
           </li>
