Add Sorbonne as a partner.

--- a/src/_includes/components/about.njk
+++ b/src/_includes/components/about.njk
@@ -24,7 +24,7 @@ Goals: to provide grants for young researchers in cosmology and related subjects
 
 The grants will provide for visits of between 2 weeks and 2 months at the partner institutions. Visitors will generally not overlap at any one institution. New College will be requested to host the equivalent of a non-stipendiary Visiting Junior Research Fellow (JRF). The visitors will be invited to give an interdisciplinary talk (aimed at a broad audience) as well as a departmental seminar on their research.
 
-Partner institutions: New College, Oxford University and the Oxford Department of Physics, and the Johns Hopkins University (Department of Physics and Astronomy), with additional participation by the Universite Pierre et Marie Curie (Institut d'Astrophysique), Paris. The funding been generously provided by a Balzan Foundation Award to Joe Silk, supplemented by support from the Department of Physics, Oxford University and the Johns Hopkins University.
+Partner institutions: New College, Oxford University and the Oxford Department of Physics, and the Johns Hopkins University (Department of Physics and Astronomy), with additional participation by Sorbonne University (Institut d'Astrophysique), Paris. The funding been generously provided by a Balzan Foundation Award to Joe Silk, supplemented by support from the Department of Physics, Oxford University and the Johns Hopkins University.
     {% endmarkdown %}
   </div>
 </section>
