Sync current site content

--- a/src/_includes/components/applications.njk
+++ b/src/_includes/components/applications.njk
@@ -14,9 +14,7 @@ In your application please include the following three files:
 
 When complete, please send all three files in a single email to [{{ administrator.name }}](mailto:{{ administrator.email }}) with the subject: "CCS Application: [your name]".
 
-Applications for travel during the period April - September 2023, including the appointment of a Balzan Fellow at New College, Oxford, for Trinity Term 2023, will shortly be considered. Please submit by February 28th, 2023 for full consideration. 
-
-Applications for travel during {{ application_dates.academicYear }} will also shortly be considered. Please submit by {{ application_dates.closingDate }} for full consideration. If you have any questions, [please contact {{ administrator.name }}](mailto:{{ administrator.email }}).
+Applications for travel during {{ application_dates.academicYear }} will shortly be considered. Please submit by {{ application_dates.closingDate }} for full consideration. If you have any questions, [please contact {{ administrator.name }}](mailto:{{ administrator.email }}).
     {% endmarkdown %}
   </div>
 </section>
