--- a/src/_includes/components/about.njk
+++ b/src/_includes/components/about.njk
@@ -5,7 +5,7 @@
   <div class="markdown">
 
 <h3>
-We are now accepting applications for travel in 2024
+We are now accepting applications for travel in 2025 / 2026
 </h3>
     {% markdown %}
 Cosmology is in a golden age of discovery, but a deeper understanding of what is meant by a science of cosmology, in the fuller reaches of these words, is in its infancy. It must involve astrophysics, physics, philosophy, and cosmogony, and tackle genuinely fundamental questions in cosmology.
